# dynamic-cv

./: .gitignore  .python-version  LICENSE  Makefile  Nazih Boudaakkar CV ats.tex  Nazih Boudaakkar CV.tex  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: python-package.yml
examples/: example_include.tex  template.tex
sections/: education.tex  experience.tex  languages.tex  skills printable.tex  skills.tex  volunteering.tex
src/cv_maker/: backend.py  config.py  cv_types.py  definitions.py  loader.py  main.py  mode.py  protocols.py  template.py
src/examples/: data.yaml
tests/: test_loader.py  test_standalone_mode.py  test_template.py
