[metadata]
name = cv-maker
version = 0.0.1
author = Nazih Boudaakkar
author_email = nazih.boudaakkar@proton.me
license = GPL-3.0
license_file = LICENSE

description = A simple CLI utility for those in need to create and manage multiple CVs
platform = unix, linux, osx, win32, cygwin
requires-python = ">=3.9"
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities

[options]
packages = cv_maker
install_requires =
    PyYAML>=6
    jinja2>=3.1
python_requires = >=3.9

package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.2
    pytest-cov>=5.0
    mypy>=1.10
    flake8>=7.1
    tox>=4.15

[options.package_data]
cv_maker = py.typed

[flake8]
max-line-length = 120
